[package]
name = "candle-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
serde = "1.0"
anyhow = "1.0"
hf-hub = "0.3.2"
tokenizers = "0.14.1"
serde_json = "1.0.107"
records = "0.2.0"


[[example]]
name = "tensor"

